traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:17: error: not found: value setPoss
    setPoss(getX,getY+1)
    ^